fix_3_新規コーディング課題レベル5(overflow)

--- a/html/level5/CSS/style.css
+++ b/html/level5/CSS/style.css
@@ -480,7 +480,7 @@ main .image-wrapper04 {
   color: darkgray;
 }
 
-  /* deviece-idons */
+  /* deviece-icons */
 .device-icons {
   display: flex;
   justify-content: space-between;
@@ -503,6 +503,69 @@ main .image-wrapper04 {
   letter-spacing: 0.1rem;
   color: darkgray;
   padding-top: 2rem;
+}
+
+/* アイコン表示のためのラジオボタン　device-radio　 */
+
+.device-radio ul li {
+  display: inline-block;
+  margin-top: 5rem;
+  margin-right: 2.5rem;
+}
+
+.device-radio ul li:last-child {
+  margin-right: 0;
+}
+
+
+.radio-btn {
+  /* デフォルトのラジオボタンを非表示 */
+  display: none;
+}
+
+/* device-radio04~06をPC版では非表示 */
+.device-radio ul li .dev-rad04-pc::before,
+.device-radio ul li .dev-rad04-pc::after,
+.device-radio ul li .dev-rad05-pc::before,
+.device-radio ul li .dev-rad05-pc::after,
+.device-radio ul li .dev-rad06-pc::before,
+.device-radio ul li .dev-rad06-pc::after {
+  display: none;
+}
+
+.device-label {
+  position: relative;
+}
+
+.device-label::before {
+  content: "";
+  display: block;
+  background-color: #e8e8e8;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1.3rem;
+  height: 1.3rem;
+  border: 1px solid #e8e8e8;
+  border-radius: 50%;
+}
+
+.device-label::after {
+  content: "";
+  display: block;
+  background-color: #ee753d;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1.5rem;
+  height: 1.5rem;
+  border: 0px solid #e8e8e8;
+  border-radius: 50%;
+  opacity: 0;
+}
+
+.radio-btn:checked + .device-label::after {
+  opacity: 1;
 }
 
 /* getin-wrapper */
@@ -839,6 +902,7 @@ footer a {
 /* device-icons */
   .device-icons {
     margin: 0;
+    overflow: auto;  /* はみ出た部分を隠す(autoでスクロールができる) */
   }
 
   .device-icons .device {
@@ -852,6 +916,30 @@ footer a {
     line-height: 2rem;
     font-size: 1.4rem;
   }
+
+  .device-radio ul li {
+    margin-top: 2rem;
+  }
+
+  .device-label::before {
+    width: 1.1rem;
+    height: 1.1rem;
+  }
+
+  .device-label::after {
+    width: 1.3rem;
+    height: 1.3rem;
+  }
+
+  /* device-radio04~06をスマホ版では表示 */
+.device-radio ul li .dev-rad04-pc::before,
+.device-radio ul li .dev-rad04-pc::after,
+.device-radio ul li .dev-rad05-pc::before,
+.device-radio ul li .dev-rad05-pc::after,
+.device-radio ul li .dev-rad06-pc::before,
+.device-radio ul li .dev-rad06-pc::after {
+  display: block;
+}
 
 /* info-wrapper */
   .info-wrapper {
